<resources>
    <string name="app_name">Diplom</string>

    <string name="register_text">You are welcomed by the registration field.</string>
    <string name="login_text">You are welcomed by the login field.</string>
    <string name="activity_user__text">Вы успешно авторизовались!</string>


    <string name="home_text">
        Данное приложение является компонентской частью распределенной системы тестирования знаний!
        Здесь вы можете испытать свои знания  в области «web-разработки» ответив на 10 вопросов, а так же узнать выходной результат по итогу.
        Кликайте на кнопку «Начать тест» и да прибудет с вами сила!
    </string>


    <string name="btn_home">Начать тест</string>
    <string name="back_home">Вернуться к описанию</string>
    <string name="resultTest">Результат</string>

    <string name="result">Результат прохождения теста</string>
    <string name="comback">Начать сначала</string>

    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_reg">Sign Up</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_regHere">Go to registration</string>

</resources>
